fix: overflow correction for mobile

--- a/assets/styles/eveBook/IconModule/style.less
+++ b/assets/styles/eveBook/IconModule/style.less
@@ -75,6 +75,8 @@
 @media screen and (max-width:480px) {
 	.Icon {
 		margin: 0;
+		width: 48px;
+		height: 48px;
 	}	
 }
 
