--- a/assets/styles/eveBook/IntroModule/style.less
+++ b/assets/styles/eveBook/IntroModule/style.less
@@ -3,21 +3,25 @@
 	display: flex;
 	flex-direction: column;
 	figure {
-		display: flex;
-	  	flex-direction: column;
-	  	justify-content: center;
-	  	margin: 0;
+		margin: 0;
+		position: relative;
 	}
 	#logo {
-		flex: 2;
-		margin: 0 auto;
+			height: 350px;
 		img {
 			display: block;
-			margin: 0 auto;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			margin: auto;
 			width: 350px;
+			height: 350px;
 		}
 		-webkit-filter: blur(35px);
 		opacity: 0;
+		height: 70%;
 	}
 
 	#enter {
@@ -62,14 +66,24 @@
 	}
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) and (orientation: landscape) {
 
 	#intro{
 		#logo{
+				min-height: 100%;
+		}
+	}
+}
+
+@media screen and (max-width: 500px) {
+	#intro{
+		#logo{
+				height: 260px;
 			img{
-				width: 80%;
+				position: relative;
+				height: 260px;
+				width: 260px;
 			}
 		}
 	}
-	
 }
