--- a/assets/styles/eveBook/NavModule/style.less
+++ b/assets/styles/eveBook/NavModule/style.less
@@ -8,7 +8,6 @@ nav#icons{
 	.left, .right{
 		height: 100%;		
 		padding-top: 1.5%;
-		overflow: hidden;
 	}
 
 }
